Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/USceneCaptureComponentCube.h

	
	DOTNET_EXPORT INT_PTR E_NewObject_USceneCaptureComponentCube(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<USceneCaptureComponentCube>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CaptureScene(USceneCaptureComponentCube* Self)
	{
		Self->CaptureScene();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CaptureSceneDeferred(USceneCaptureComponentCube* Self)
	{
		Self->CaptureSceneDeferred();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnRegister(USceneCaptureComponentCube* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SendRenderTransform_Concurrent(USceneCaptureComponentCube* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_UpdateContent(USceneCaptureComponentCube* Self)
	{
		Self->UpdateContent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnUnregister(USceneCaptureComponentCube* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ApplyWorldOffset(USceneCaptureComponentCube* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_BeginDestroy(USceneCaptureComponentCube* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CalcBoundingCylinder(USceneCaptureComponentCube* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CanAttachAsChild(USceneCaptureComponentCube* Self, USceneComponent* ChildComponent, char* SocketName)
	{
		auto _p0 = ChildComponent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		return Self->CanAttachAsChild(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_DestroyComponent(USceneCaptureComponentCube* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_DetachFromComponent(USceneCaptureComponentCube* Self, INT_PTR DetachmentRules)
	{
		auto _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromComponent(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_DetachFromParent(USceneCaptureComponentCube* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_DoesSocketExist(USceneCaptureComponentCube* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return Self->DoesSocketExist(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetCollisionObjectType(USceneCaptureComponentCube* Self)
	{
		return Self->GetCollisionObjectType();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetCollisionResponseToChannel(USceneCaptureComponentCube* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetComponentVelocity(USceneCaptureComponentCube* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentVelocity());
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetSocketLocation(USceneCaptureComponentCube* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetSocketQuaternion(USceneCaptureComponentCube* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetSocketRotation(USceneCaptureComponentCube* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetSocketTransform(USceneCaptureComponentCube* Self, char* InSocketName, ERelativeTransformSpace TransformSpace)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		auto _p1 = TransformSpace;
		return (INT_PTR) new FTransform(Self->GetSocketTransform(_p0, _p1));
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_HasAnySockets(USceneCaptureComponentCube* Self)
	{
		return Self->HasAnySockets();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsAnySimulatingPhysics(USceneCaptureComponentCube* Self)
	{
		return Self->IsAnySimulatingPhysics();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsPrecomputedLightingValid(USceneCaptureComponentCube* Self)
	{
		return Self->IsPrecomputedLightingValid();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsSimulatingPhysics(USceneCaptureComponentCube* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->IsSimulatingPhysics(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsVisible(USceneCaptureComponentCube* Self)
	{
		return Self->IsVisible();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsVisibleInEditor(USceneCaptureComponentCube* Self)
	{
		return Self->IsVisibleInEditor();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsWorldGeometry(USceneCaptureComponentCube* Self)
	{
		return Self->IsWorldGeometry();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_MoveComponentImpl(USceneCaptureComponentCube* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR Hit, EMoveComponentFlags MoveFlags, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)Hit;
		auto _p4 = MoveFlags;
		auto _p5 = Teleport;
		return ((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->MoveComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnAttachmentChanged(USceneCaptureComponentCube* Self)
	{
		Self->OnAttachmentChanged();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnChildAttached(USceneCaptureComponentCube* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnChildAttached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnChildDetached(USceneCaptureComponentCube* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnChildDetached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnComponentDestroyed(USceneCaptureComponentCube* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnHiddenInGameChanged(USceneCaptureComponentCube* Self)
	{
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnHiddenInGameChanged_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnUpdateTransform(USceneCaptureComponentCube* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->OnUpdateTransform(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnVisibilityChanged(USceneCaptureComponentCube* Self)
	{
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnVisibilityChanged_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostNetReceive(USceneCaptureComponentCube* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostRepNotifies(USceneCaptureComponentCube* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PreNetReceive(USceneCaptureComponentCube* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PropagateLightingScenarioChange(USceneCaptureComponentCube* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SetRelativeScale3D(USceneCaptureComponentCube* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ShouldCollideWhenPlacing(USceneCaptureComponentCube* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ShouldCreateRenderState(USceneCaptureComponentCube* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_UpdatePhysicsVolume(USceneCaptureComponentCube* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_Activate(USceneCaptureComponentCube* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_AddTickPrerequisiteActor(USceneCaptureComponentCube* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_AddTickPrerequisiteComponent(USceneCaptureComponentCube* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_BeginPlay(USceneCaptureComponentCube* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CreateRenderState_Concurrent(USceneCaptureComponentCube* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_Deactivate(USceneCaptureComponentCube* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_DestroyRenderState_Concurrent(USceneCaptureComponentCube* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetComponentClassCanReplicate(USceneCaptureComponentCube* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetReadableName(USceneCaptureComponentCube* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_HasValidPhysicsState(USceneCaptureComponentCube* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_InitializeComponent(USceneCaptureComponentCube* Self)
	{
		Self->InitializeComponent();
	}